--- a/index.html
+++ b/index.html
@@ -2,17 +2,66 @@
 <html lang="ru">
   <head>
     <title>Заголовок</title>
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> 
+    <script src="script.js" defer></script> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" media="screen">
   </head>
 
   <body>
+
     <header>
-      Шапка
+      <div class="container">
+        Шапка + меню
+      </div>
     </header>
-    	Привет, мир!
+
+      <div class="container">
+        <div class="">
+          13 лет совершенствуем компетенции в Друпал поддержке!
+        </div>
+
+        <div class="">
+          Поддержка от Drupal-coder
+        </div>
+
+        <div class="">
+          Экспертиза в Drupal, опыт 14 лет!
+        </div>
+
+        <div class="">
+          Тарифы
+        </div>
+
+        <div class="">
+          Наши профессиональные разработчики выполняют быстро любые задачи
+        </div>
+
+        <div class="">
+          Команда
+        </div>
+
+        <div class="">
+          Последние кейсы
+        </div>
+
+        <div class="">
+          Отзывы
+        </div>
+
+        <div class="">
+          FAQ
+        </div>
+      </div>
+
     <footer>
-      (с) Кокоровец Марина и Щербина Мирон 2024
+      <div class="container">
+        Футер
+      </div>
     </footer>
+
   </body>
 
 </html>
