--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> 
     <script src="script.js" defer></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" media="screen">
   </head>
@@ -13,11 +14,65 @@
   <body>
 
     <header>
-      <div class="container">
-        Шапка + меню
-      </div>
+      Меню
     </header>
 
+    <div class="start">
+      <div class="container">
+        <div class="row overlay">
+            <div class="col-md-6 title">
+              <h1>Поддержка сайтов на Drupal</h1>
+              <div> Сопровождение и поддержка сайтов на CMS Drupal любых версий и запущенности</div>
+              <div>
+                исправить ссылку
+                <a href="#" class="title-btn flowing-scroll">Тарифы</a>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="row">
+                <div class="col-6 frame">
+                  <h3>#1</h3>
+                  <div>Drupal-разработчик в России по версии Рунета</div>
+                </div>
+                <div class="col-6 frame">
+                  <h3>3+</h3>
+                  <div>средний опыт специалистов более 3 лет</div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-6 frame">
+                  <h3>14</h3>
+                  <div>лет опыта в сфере Drupal</div>
+                </div>
+                <div class="col-6 frame">
+                  <h3>50+</h3>
+                  <div>модулей и тем в формате DrupalGive</div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-6 frame">
+                  <h3>90 000+</h3>
+                  <div>часов поддержки сайтов на Drupal</div>
+                </div>
+                <div class="col-6 frame">
+                  <h3>300+</h3>
+                  <div>проектов на поддержке</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-video">
+        <video loop="" muted="" autoplay="" class="video">
+          <source src="source/video.mp4" type="video/mp4">
+        </video>
+      </div>
+
+    </div>
+    <div class="main">
       <div class="container">
         <div class="">
           13 лет совершенствуем компетенции в Друпал поддержке!
@@ -55,6 +110,7 @@
           FAQ
         </div>
       </div>
+    </div>
 
     <footer>
       <div class="container">
