--- a/index.html
+++ b/index.html
@@ -101,47 +101,77 @@
       </div>
     </header>
 
-    <div class="start">
-      <div class="container">
-        <div class="row overlay">
-            <div class="col-md-6 title">
-              <h1>Поддержка сайтов на Drupal</h1>
-              <div> Сопровождение и поддержка сайтов на CMS Drupal любых версий и запущенности</div>
-              <div>
-                исправить ссылку
-                <a href="#" class="title-btn flowing-scroll">Тарифы</a>
-              </div>
-            </div>
+     <div id="video-block">
+        <div id="video-filter"></div>
+        <video class="video-background"
+          src="https://res.cloudinary.com/dpyzh619e/video/upload/v1606770179/video_bjr0b7.mp4" playsinline=""
+          autoplay="autoplay" loop="" preload="auto" muted="">
+        </video>
+      </div>
 
-            <div class="col-md-6">
-              <div class="row">
-                <div class="col-6 frame">
-                  <h3>#1</h3>
-                  <div>Drupal-разработчик в России по версии Рунета</div>
-                </div>
-                <div class="col-6 frame">
-                  <h3>3+</h3>
-                  <div>средний опыт специалистов более 3 лет</div>
+      <div class="container header">
+        <div class="row">
+          <div class="col-md-6">
+            <h1 class="bars-title">
+              Поддержка<br>сайтов на Drupal
+            </h1>
+            <div class="sub-title">
+              Сопровождение и поддержка сайтов<br>
+              на CMS Drupal любых версий и запущенности
+            </div>
+            <a href="#rates" class="rate-button">ТАРИФЫ (Исправить)</a>
+          </div>
+          <div class="col-md-6">
+            <div class="row redline-text-blocks">
+              <div class="col-sm-4 col-6 redline-box">
+                <div class="redline">
+                  <div class="redline-title">
+                    #1
+                    <img src="./source/cup.png" alt="#1" />
+                  </div>
+                  <div class="redline-text">
+                    Drupal-разработчик <br> в России по версии <br> Рейтинга Рунета
+                  </div>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-6 frame">
-                  <h3>14</h3>
-                  <div>лет опыта в сфере Drupal</div>
-                </div>
-                <div class="col-6 frame">
-                  <h3>50+</h3>
-                  <div>модулей и тем в формате DrupalGive</div>
+              <div class="col-sm-4 col-6 redline-box">
+                <div class="redline">
+                  <div class="redline-title">3+</div>
+                  <div class="redline-text">
+                    средний опыт <br> специалистов более<br> 3 лет
+                  </div>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-6 frame">
-                  <h3>90 000+</h3>
-                  <div>часов поддержки сайтов на Drupal</div>
+              <div class="col-sm-4 col-6 redline-box">
+                <div class="redline">
+                  <div class="redline-title">14</div>
+                  <div class="redline-text">
+                    лет опыта в сфере Drupal
+                  </div>
                 </div>
-                <div class="col-6 frame">
-                  <h3>300+</h3>
-                  <div>проектов на поддержке</div>
+              </div>
+              <div class="col-sm-4 col-6 redline-box">
+                <div class="redline">
+                  <div class="redline-title">50+</div>
+                  <div class="redline-text">
+                    модулей и тем <br> в формате DrupalGive
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4 col-6 redline-box">
+                <div class="redline">
+                  <div class="redline-title">90 000</div>
+                  <div class="redline-text">
+                    часов поддержки <br> сайтов на Drupal
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4 col-6 redline-box">
+                <div class="redline">
+                  <div class="redline-title">300+</div>
+                  <div class="redline-text">
+                    Проектов <br> на поддержке
+                  </div>
                 </div>
               </div>
             </div>
@@ -149,13 +179,7 @@
         </div>
       </div>
 
-      <div class="bg-video">
-        <video loop="" muted="" autoplay="" class="video">
-          <source src="source/video.mp4" type="video/mp4">
-        </video>
-      </div>
 
-    </div>
     <div class="main">
       <div class="container">
         <div class="">
