--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
   <body>
 
-    <header class="navbar navbar-default navbar-expand-lg fixed-bottom sticky-lg-top" id="header">
-      <div class="container-fluid text-center row">
-        <div class="col-12 row ">
-          <div class="col-2"></div>
+    <header class="navbar navbar-default navbar-expand-lg fixed-bottom sticky-lg-top d-flex justify-content-center" id="header">
+      <div class="container-fluid text-center row d-flex justify-content-center">
+        <div class="col-12 row d-flex justify-content-center ">
+          <!--div class="col-2"></div-->
           <div class="col-12 col-lg-2 d-flex align-middle align-items-center align-text-center justify-content-between">
 
             <figure class="figure align-middle align-items-center my-auto">
@@ -42,10 +42,10 @@
               <span class="navbar-toggler-icon"></span>
             </button>
           </div>
-          <div class="col-4 collapse navbar-collapse" id="navbarNavDropdown"
+          <div class="col-10 collapse navbar-collapse" id="navbarNavDropdown"
             style="margin:0 10%">
             <div class="container-fluid text-center">
-              <ul class="navbar-nav">
+              <ul class="navbar-nav justify-content-end">
                 <li class="nav-item">
                   <a class="nav-link" href="#">ПОДДЕРЖКА DRUPAL</a>
                 </li>
@@ -95,7 +95,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-2"></div>
+          <!--div class="col-2"></div-->
 
         </div>
       </div>
