--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> 
-    <script src="script.js" defer></script> 
     <script 
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" media="screen">
-    <link rel="stylesheet" href="header_style.css">
-    <script
-      src="header_script.js"></script>
+    <link rel="stylesheet" href="styles/style.css" media="screen">
+    <link rel="stylesheet" href="styles/header_style.css">
+    <script src="scripts/header_script.js"></script>
   </head>
 
   <body>
@@ -28,7 +26,7 @@
             <figure class="figure align-middle align-items-center my-auto">
             <a class="navbar-brand align-middle" id="brand" href="#">
               
-                <img src="logo-initlab.svg" class="figure-img img-fluid " alt="...">
+                <img src="source/logo-initlab.svg" class="figure-img img-fluid " alt="...">
               
               <!--span class="align-middle">
                 <img class="align-middle" src="logo-initlab.svg">
