--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
     
         <div class="container mx-0">
           <div class="row">
-            <div class="mt-3 col-12 col-md-4 d-flex flex-column align-items-center d-md-block align-items-md-start">
+            <div class="mt-3 col-12 col-md-4 d-flexalign-items-center d-md-block ">
               <div class="max-w-180">
                 <div class="text-center text-md-start">
                   <img src="./sources/competency-20.svg" alt="Событие GA" />
@@ -483,7 +483,7 @@
                 <div>Настройка события GA в интернет-магазине</div>
               </div>
             </div>
-            <div class="mt-3 col-12 col-md-4 d-flex flex-column align-items-center d-md-block align-items-md-start">
+            <div class="mt-3 col-12 col-md-4 d-flex flex-column align-items-center d-md-block ">
               <div class="max-w-180">
                 <div class="text-center text-md-start">
                   <img src="./sources/competency-21.svg" alt="Мобильная версия" />
@@ -492,7 +492,7 @@
                 <div>Разработка мобильной версии сайта</div>
               </div>
             </div>
-            <div class="mt-3 col-12 col-md-4 d-flex flex-column align-items-center d-md-block align-items-md-start">
+            <div class="mt-3 col-12 col-md-4 d-flex flex-column align-items-center d-md-block ">
               <div class="max-w-180">
                 <div class="text-center text-md-start">
                   <img src="./sources/competency-22.svg" alt="Оплата" />
