fixed some issues

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 <div class="tarrif-body-item">Unused paid hours credited to the next month</div>
               </div>
               <div class="tariff-footer">
-                <a href="#block-podderzhkasaytovkontaktnayaforma" class="contact-form tariff-footer-btn">Contact Us!</a>
+                <a href="#contacts" class="contact-form tariff-footer-btn">Contact Us!</a>
               </div>
             </div>
             <div class="tariff-wrapper">
@@ -440,7 +440,7 @@
                 <div class="tarrif-body-item">Unused paid hours are not credited to the next month</div>
               </div>
               <div class="tariff-footer">
-                <a href="#block-podderzhkasaytovkontaktnayaforma" class="contact-form tariff-footer-btn">Contact Us!</a>
+                <a href="#contacts" class="contact-form tariff-footer-btn">Contact Us!</a>
               </div>
             </div>
             <div class="tariff-wrapper">
@@ -456,13 +456,13 @@
                 <div class="tarrif-body-item">Unused paid hours are not credited to the next month</div>
               </div>
               <div class="tariff-footer">
-                <a href="#block-podderzhkasaytovkontaktnayaforma" class="contact-form tariff-footer-btn">Contact Us!</a>
+                <a href="#contacts" class="contact-form tariff-footer-btn">Contact Us!</a>
               </div>
             </div>
           </div>
           <div class="tariffs-ps">
             No plan fits your needs? Request a personalized quote!
-            <a href="#block-podderzhkasaytovkontaktnayaforma" class="tariffs-link">I need a plan of my own</a>
+            <a href="#contacts" class="tariffs-link">I need a plan of my own</a>
           </div>
         </section>
       </div>
@@ -962,7 +962,7 @@
     </div>
 
 
-    <footer class="footer position-relative">
+    <footer class="footer position-relative" id="contacts">
         <div class="footer-background"></div>
           
         <img src="./sources/footer-D-1.svg" alt="Декоративный элемент 1" class="footer-image image-1">
