центрирование неоторых элементов внутри блока

--- a/index.html
+++ b/index.html
@@ -468,37 +468,31 @@
       </div>
     
       <div class="" id="tasks">
-        <h2 class="fw-bold m-2 max-w-1000 display-md-1">
-          Наши профессиональные разработчики выполняют быстро любые задачи
+        <h2 class="fw-bold m-2 text-center">
+          Наши профессиональные <br class="d-none d-lg-inline d-xxl-none">разработчики <br class="d-none d-xxl-inline">выполняют <br class="d-none d-lg-inline d-xxl-none">быстро любые задачи
         </h2>
     
         <div class="container mx-0">
           <div class="row">
-            <div class="mt-3 col-12 col-md-4 d-flexalign-items-center d-md-block ">
+            <div class="mt-3 col-12 col-md-4 d-flex justify-content-center">
               <div class="max-w-180">
-                <div class="text-center text-md-start">
-                  <img src="./sources/competency-20.svg" alt="Событие GA" />
-                  <h2 class="fw-bold mb-0">от 1ч</h2>
-                </div>
-                <div>Настройка события GA в интернет-магазине</div>
+                  <img src="./sources/competency-20.svg" alt="Событие GA" class="align-items-center d-block mx-auto"/>
+                  <h2 class="fw-bold mb-0 text-center">от 1ч</h2>
+                <div class="text-center">Настройка события GA в интернет-магазине</div>
               </div>
             </div>
-            <div class="mt-3 col-12 col-md-4 d-flex flex-column align-items-center d-md-block ">
+            <div class="mt-3 col-12 col-md-4 d-flex justify-content-center">
               <div class="max-w-180">
-                <div class="text-center text-md-start">
-                  <img src="./sources/competency-21.svg" alt="Мобильная версия" />
-                  <h2 class="fw-bold mb-0">от 20ч</h2>
-                </div>
-                <div>Разработка мобильной версии сайта</div>
+                  <img src="./sources/competency-21.svg" alt="Мобильная версия" class="align-items-center d-block mx-auto"/>
+                  <h2 class="fw-bold mb-0 text-center">от 20ч</h2>
+                <div class="text-center">Разработка мобильной версии сайта</div>
               </div>
             </div>
-            <div class="mt-3 col-12 col-md-4 d-flex flex-column align-items-center d-md-block ">
+            <div class="mt-3 col-12 col-md-4 d-flex justify-content-center">
               <div class="max-w-180">
-                <div class="text-center text-md-start">
-                  <img src="./sources/competency-22.svg" alt="Оплата" />
-                  <h2 class="fw-bold mb-0">от 8ч</h2>
-                </div>
-                <div>Интеграция модуля оплаты</div>
+                  <img src="./sources/competency-22.svg" alt="Оплата" class="align-items-center d-block mx-auto"/>
+                  <h2 class="fw-bold mb-0 text-center">от 8ч</h2>
+                <div class="text-center">Интеграция модуля оплаты</div>
               </div>
             </div>
           </div>
